# reflex-sumType-utilities

./: default.nix  package-overlay.nix  readme.md  reflex-sumType-utilities.cabal  stack.yaml
app/: Main.hs
src/Reflex/: FanGeneric.hs
src/Reflex/Dynamic/: CollectDyn.hs  Common.hs  EqProduct.hs  FactorDyn.hs  PerConstructor.hs  ProductHold.hs
src/Reflex/Requester/: SumSplitRequesterT.hs  SumTypeSupport.hs
